@@ -1,3 +1,8 @@
+1998-09-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* gui.h (_Canvas, _Frame): Move Frame's assertGeometry to 
+	Canvas as checkGeometry:.
+
 1998-09-25  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* gui.h (_Canvas): Use addWidget:X:Y:centerFlag: and removeWidget:.
